==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/at32f437vmt7/third_party_driver/uart/connect_usart.c <==
#include <board.h>
#include <connect_usart.h>
#include <dev_serial.h>
#include <at32f435_437_usart.h>
#include <at32f435_437_misc.h>

static void UartIsr(struct SerialBus *serial, struct SerialDriver *serial_drv, struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    if(usart_interrupt_flag_get(serial_hw_cfg->uart_device, USART_RDBF_FLAG) != RESET) {
        SerialSetIsr(serial_dev, SERIAL_EVENT_RX_IND);
    }
}

static uint32 SerialInit(struct SerialDriver *serial_drv, struct BusConfigureInfo *configure_info)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
    struct SerialDevParam *dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;

    if (configure_info->private_data)
    {
        struct SerialCfgParam *serial_cfg_new = (struct SerialCfgParam *)configure_info->private_data;
        SerialCfgParamCheck(serial_cfg, serial_cfg_new);

        if (serial_cfg_new->data_cfg.dev_recv_callback)
        {
            BusDevRecvCallback(&(serial_dev->haldev), serial_cfg_new->data_cfg.dev_recv_callback);
        }
    }

    // config serial receive sem timeout
    dev_param->serial_timeout = serial_cfg->data_cfg.serial_timeout;

    /* configure usart param */
    usart_type* usart_x = serial_hw_cfg->uart_device;
    uint32_t baud_rate = serial_cfg->data_cfg.serial_baud_rate;
    usart_data_bit_num_type data_bit;
    usart_stop_bit_num_type stop_bit;
    usart_parity_selection_type parity;

    switch (serial_cfg->data_cfg.serial_data_bits)
    {
        case DATA_BITS_8:
            data_bit = USART_DATA_8BITS;
            break;
        case DATA_BITS_9:
            data_bit = USART_DATA_9BITS;
            break;
        default:
            data_bit = USART_DATA_8BITS;
            break;
    }

    switch (serial_cfg->data_cfg.serial_stop_bits)
    {
        case STOP_BITS_1:
            stop_bit = USART_STOP_1_BIT;
            break;
        case STOP_BITS_2:
            stop_bit = USART_STOP_2_BIT;
            break;
        default:
            stop_bit = USART_STOP_1_BIT;
            break;
    }

    switch (serial_cfg->data_cfg.serial_parity_mode)
    {
        case PARITY_NONE:
            parity = USART_PARITY_NONE;
            break;
        case PARITY_EVEN:
            parity = USART_PARITY_EVEN;
            break;
        case PARITY_ODD:
            parity = USART_PARITY_ODD;
            break;
        default:
            parity = USART_PARITY_NONE;
            break;
    }

    usart_init(usart_x, baud_rate, data_bit, stop_bit);
    usart_parity_selection_config(usart_x, parity);
    usart_transmitter_enable(usart_x, TRUE);
    usart_receiver_enable(usart_x, TRUE);

    usart_flag_clear(usart_x, USART_RDBF_FLAG);
    usart_interrupt_enable(usart_x, USART_RDBF_INT, TRUE);

    usart_enable(usart_x, TRUE);

    nvic_irq_enable(serial_hw_cfg->irq, 1, 0);

    return EOK;
}

static uint32 SerialConfigure(struct SerialDriver *serial_drv, int serial_operation_cmd)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    switch (serial_operation_cmd)
    {
    case OPER_CLR_INT:
        nvic_irq_disable(serial_hw_cfg->irq);
        break;

    case OPER_SET_INT:
        nvic_irq_enable(serial_hw_cfg->irq, 1, 0);
        break;
    }

    return EOK;
}

static int SerialPutChar(struct SerialHardwareDevice *serial_dev, char c)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    while(usart_flag_get(serial_hw_cfg->uart_device, USART_TDBE_FLAG) == RESET);
    usart_data_transmit(serial_hw_cfg->uart_device, (uint16_t)c);

    return 1;
}

static int SerialGetChar(struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;
    int ch = -1;

    if(usart_flag_get(serial_hw_cfg->uart_device, USART_RDBF_FLAG) != RESET)
    {
        ch = usart_data_receive(serial_hw_cfg->uart_device);
    }

    return ch;
}

int HwUsartInit(void)
{
    x_err_t ret = EOK;

    UsartClockInit();
    UsartGpioInit();

#ifdef BSP_USING_UART1
    ret = HwUsart1Init();
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart1 error ret %u\n", ret);
        return ERROR;
    }
#endif

#ifdef BSP_USING_UART2
    ret = HwUsart2Init();
    if (EOK != ret)
    {
        KPrintf("HwUartInit uart2 error ret %u\n", ret);
        return ERROR;
    }
#endif

    return ret;
}
